--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "PHP Getting Started",
-  "description": "A barebones PHP app that makes use of the Silex web framework",
-  "repository": "https://github.com/heroku/php-getting-started",
+  "name": "PHP",
+  "description": "一个基于Silex web framework的PHP小应用",
+  "repository": "https://github.com/CarlTien/carlphp",
   "addons": []
 }
